--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,3 @@
-
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
 @use '@angular/material' as mat;
@@ -9,10 +8,44 @@
 // Be sure that you only ever include this mixin once!
 @include mat.core();
 
+
+$custom-teal: (
+  50 : #e3f6f2,
+  100 : #b9eadf,
+  200 : #8bdcca,
+  300 : #5dcdb4,
+  400 : #3ac3a4,
+  500 : #17b894,
+  600 : #14b18c,
+  700 : #11a881,
+  800 : #0da077,
+  900 : #079165,
+  A100 : #beffe8,
+  A200 : #8bffd5,
+  A400 : #58ffc3,
+  A700 : #3fffba,
+  contrast: (50 : #000000,
+    100 : #000000,
+    200 : #000000,
+    300 : #000000,
+    400 : #000000,
+    500 : #000000,
+    600 : #ffffff,
+    700 : #ffffff,
+    800 : #ffffff,
+    900 : #ffffff,
+    A100 : #000000,
+    A200 : #000000,
+    A400 : #000000,
+    A700 : #000000,
+  )
+);
+
+
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$KanbanBoard-primary: mat.define-palette(mat.$indigo-palette);
+$KanbanBoard-primary: mat.define-palette($custom-teal);
 $KanbanBoard-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
 
 // The warn palette is optional (defaults to red).
@@ -20,13 +53,10 @@ $KanbanBoard-warn: mat.define-palette(mat.$red-palette);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$KanbanBoard-theme: mat.define-light-theme((
-  color: (
-    primary: $KanbanBoard-primary,
-    accent: $KanbanBoard-accent,
-    warn: $KanbanBoard-warn,
-  )
-));
+$KanbanBoard-theme: mat.define-light-theme((color: (primary: $KanbanBoard-primary,
+        accent: $KanbanBoard-accent,
+        warn: $KanbanBoard-warn,
+      )));
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
@@ -35,5 +65,12 @@ $KanbanBoard-theme: mat.define-light-theme((
 
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
