--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,35 +10,35 @@
 
 
 $custom-teal: (
-  50 : #e3f6f2,
-  100 : #b9eadf,
-  200 : #8bdcca,
-  300 : #5dcdb4,
-  400 : #3ac3a4,
-  500 : #17b894,
-  600 : #14b18c,
-  700 : #11a881,
-  800 : #0da077,
-  900 : #079165,
-  A100 : #beffe8,
-  A200 : #8bffd5,
-  A400 : #58ffc3,
-  A700 : #3fffba,
-  contrast: (50 : #000000,
-    100 : #000000,
-    200 : #000000,
-    300 : #000000,
-    400 : #000000,
-    500 : #000000,
-    600 : #ffffff,
-    700 : #ffffff,
-    800 : #ffffff,
-    900 : #ffffff,
-    A100 : #000000,
-    A200 : #000000,
-    A400 : #000000,
-    A700 : #000000,
-  )
+    50 : #e3f6f2,
+    100 : #b9eadf,
+    200 : #8bdcca,
+    300 : #5dcdb4,
+    400 : #3ac3a4,
+    500 : #17b894,
+    600 : #14b18c,
+    700 : #11a881,
+    800 : #0da077,
+    900 : #079165,
+    A100 : #beffe8,
+    A200 : #8bffd5,
+    A400 : #58ffc3,
+    A700 : #3fffba,
+    contrast: (50 : #000000,
+        100 : #000000,
+        200 : #000000,
+        300 : #000000,
+        400 : #000000,
+        500 : #000000,
+        600 : #ffffff,
+        700 : #ffffff,
+        800 : #ffffff,
+        900 : #ffffff,
+        A100 : #000000,
+        A200 : #000000,
+        A400 : #000000,
+        A700 : #000000,
+    )
 );
 
 
@@ -53,10 +53,13 @@ $KanbanBoard-warn: mat.define-palette(mat.$red-palette);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$KanbanBoard-theme: mat.define-light-theme((color: (primary: $KanbanBoard-primary,
+$KanbanBoard-theme: mat.define-light-theme((
+    color: (
+        primary: $KanbanBoard-primary,
         accent: $KanbanBoard-accent,
         warn: $KanbanBoard-warn,
-      )));
+    )
+));
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
@@ -67,10 +70,10 @@ $KanbanBoard-theme: mat.define-light-theme((color: (primary: $KanbanBoard-primar
 
 html,
 body {
-  height: 100%;
+    height: 100%;
 }
 
 body {
-  margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
 }
