Start building sidenav

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-<button mat-button color="primary">Hello Infinity</button>
-
-<router-outlet></router-outlet>
+<app-shell>
+    <h1>Hello Infinite!</h1>
+    <router-outlet></router-outlet>
+</app-shell>
