--- a/src/app/shared/shell/shell.component.html
+++ b/src/app/shared/shell/shell.component.html
@@ -1,1 +1,19 @@
-<p>shell works!</p>
+<mat-sidenav-container class="sidenav-container">
+    <mat-sidenav #drawer class="sidenav" fixedInViewport [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
+        [mode]="(isHandset$ | async) ? 'over' : 'side'" [opened]="true">
+
+        <mat-toolbar>Menu</mat-toolbar>
+
+        <mat-nav-list>
+            <a mat-list-item routerLink="/">Home</a>
+            <a mat-list-item routerLink="/login">Login</a>
+            <a mat-list-item routerLink="/kanban">Kanban</a>
+            <a mat-list-item routerLink="/customers">SSR Demo</a>
+        </mat-nav-list>
+    </mat-sidenav>
+    <mat-sidenav-content>
+
+        <ng-content></ng-content>
+
+    </mat-sidenav-content>
+</mat-sidenav-container>
